# network-ztp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_write.py  post_write.sh  pre_bash.py  pre_bash.sh
.github/workflows/: lint.yml
api/: config.py  deps.py  errors.py  main.py
api/endpoints/: devices.py  health.py  onboarding.py  sites.py  webhooks.py  workflows.py
api/middleware/: identity.py  observability.py
api/schemas/: auth.py  requests.py  responses.py
config/observability/grafana/dashboards/: compliance-health.json  onboarding-progress.json  pipeline-latency.json  worker-overview.json
config/observability/grafana/provisioning/: dashboards.yaml  datasources.yaml
config/observability/prometheus/: prometheus.yml
config/observability/prometheus/rules/: alerting.yml  recording.yml
config/observability/promtail/: config.yml
docker/: Dockerfile.api  Dockerfile.grafana  Dockerfile.prometheus  Dockerfile.promtail  Dockerfile.tempo  Dockerfile.worker
docs/superpowers/plans/: 2026-06-30-platform-foundation.md
docs/superpowers/specs/: 2026-06-30-platform-foundation-design.md
docs/tutorials/: 01-start-and-verify.md  02-your-first-workflow.md  03-reading-observability.md  04-human-in-the-loop.md  05-exploring-the-api.md  README.md
notes/: initial_prompt.md
temporal/: config.py  metrics.py  models.py  run_workflow.py  worker.py
temporal/activities/: ansible_activities.py  bootstrap_activities.py  nautobot_activities.py  onboarding_activities.py  validation_activities.py
temporal/activities/notes/: second_prompt.md
temporal/workflows/: bootstrap_device.py  bulk_onboarding.py  compliance_scan.py  onboard_site.py  provision_site.py
tests/: test_activities.py  test_bootstrap_activities.py  test_compliance_activities.py  test_config.py  test_models.py  test_onboarding_activities.py  test_onboarding_workflow.py  test_workflow.py
tests/api/: conftest.py  test_auth.py  test_devices.py  test_health.py  test_onboarding.py  test_webhooks.py  test_workflows.py
